@@ -1,5 +1,14 @@
 2003-11-10  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extractor.c:
+	Remove the call to gst_init().
+
+	* src/sj-main.c:
+	Add the GStreamer popt table for --help coolness. Also cleanup the
+	includes a little.
+
+2003-11-10  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Make the "invalid encoder" dialog work...
 
